<resources>
    <string name="app_name">寒窗</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--标签-->
    <string name="label_publish">出版</string>
    <string name="label_libary">馆藏</string>
    <string name="label_booktrack">书架</string>

    <!--个人中心-->
    <string name="percenter_mybook">我的图书</string>
    <string name="percenter_order">订单</string>
    <string name="percenter_portrayal">阅读画像</string>
    <string name="percenter_helper">客服</string>
    <string name="percenter_setting">设置</string>
    <string name="percenter_message">消息</string>
    <string name="percenter_switchlib">切换图书馆</string>
    <string name="percenter_msgpush">消息推送</string>
    <string name="percenter_clear_cache">消除缓存</string>
    <string name="percenter_help">使用帮助</string>
    <string name="percenter_feedback">意见反馈</string>
    <string name="percenter_about">关于</string>
    <string name="percenter_cancel">退出当前帐号</string>
    <!--出版-->
    <string name="publish_ranking">排行</string>
    <string name="publish_classify">分类</string>
    <string name="publish_read">畅读</string>
    <string name="publish_bookstore">书城</string>
    <string name="publish_report">快报</string>
    <!--登录-->
    <string name="login_phone">请填入您的手机号</string>
    <string name="login_verification_code">获取验证码</string>
    <string name="login_input_verification_code">请输入验证码</string>
    <string name="login_organization_unit">学校/单位</string>
    <string name="login_organization_no">学号/工号/帐号</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_pwd_reentry">再次确认密码</string>
    <string name="login_login">登录</string>
    <string name="login_register_next">下一步</string>
    <string name="login_register_do">注册</string>
    <string name="login_register_setpwd">完成</string>
    <string name="login_switch">其他登录方式</string>
    <string name="login_switch_varcode">验证码登录</string>
    <string name="login_uname">请输入用户名</string>
    <string name="login_register">注册账号</string>
    <!--书架-->
    <string name="booktrack">书架</string>
    <string name="booktrack_delete">删除</string>
    <string name="booktrack_cancel">取消</string>

    <!--对话框-->
    <string name="dialog_ok">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_title_notify">提醒</string>
    <string name="dialog_msg_clear_book">这些书将本地和书架同时删除！</string>
    <string name="dialog_delete_title">正在删除</string>
    <!--馆藏-->
    <string name="libary_newbook">新书上架</string>
    <string name="libary_themine">主题阅读</string>
    <string name="libary_typesearch">分类检索</string>
    <string name="libary_commit">提交</string>

    <!--下载-->
    <string name="down_text_faile">下载失败</string>
    <string name="down_text_success">下载完成</string>
    <string name="down_text_ing">下载中</string>
    <string name="down_text_wait">等待下载</string>
    <string name="down_text_pause">已暂停</string>

    <!--网络提示语-->
    <string name="net_notify_fail">网络开小差了，稍后再试！</string>
    <string name="net_notify_success">我们收到了！</string>
    <string name="net_service_fail">服务器离家出走了，稍后再试！</string>

</resources>
