<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_title" android:id="@+id/login_organization_include"/>

    <EditText
        android:id="@+id/login_organization_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/login_organization_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_organization_include" />

    <EditText
        android:id="@+id/login_organization_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/login_organization_no"
        app:layout_constraintEnd_toEndOf="@+id/login_organization_name"
        app:layout_constraintStart_toStartOf="@+id/login_organization_name"
        app:layout_constraintTop_toBottomOf="@+id/login_organization_name" />

    <EditText
        android:id="@+id/login_organization_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/login_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_organization_no"
        app:layout_constraintTop_toBottomOf="@+id/login_organization_no" />

    <Button
        android:id="@+id/login_organization_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:text="@string/login_login"
        app:layout_constraintEnd_toEndOf="@+id/login_organization_pwd"
        app:layout_constraintStart_toStartOf="@+id/login_organization_pwd"
        app:layout_constraintTop_toBottomOf="@+id/login_organization_pwd" />
</android.support.constraint.ConstraintLayout>
</layout>
