<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <include
            android:id="@+id/include"
            layout="@layout/layout_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/line"
            app:layout_constraintBottom_toBottomOf="@+id/include"
            app:layout_constraintEnd_toEndOf="@+id/include"
            app:layout_constraintStart_toStartOf="@+id/include" />

        <CheckBox
            android:id="@+id/percenter_msgpush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:button="@drawable/selector_toggle"
            android:text=""
            android:textColor="#888888"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <TextView
            android:id="@+id/percenter_clear_cache"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/percenter_clear_cache"
            android:textColor="#888888"
            app:layout_constraintEnd_toEndOf="@+id/percenter_msgpush"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/percenter_msgpush" />

        <TextView
            android:id="@+id/percenter_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/percenter_help"
            android:textColor="#888888"
            app:layout_constraintEnd_toEndOf="@+id/percenter_clear_cache"
            app:layout_constraintStart_toStartOf="@+id/percenter_clear_cache"
            app:layout_constraintTop_toBottomOf="@+id/percenter_clear_cache" />

        <TextView
            android:id="@+id/percenter_feedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/percenter_feedback"
            android:textColor="#888888"
            app:layout_constraintEnd_toEndOf="@+id/percenter_help"
            app:layout_constraintStart_toStartOf="@+id/percenter_help"
            app:layout_constraintTop_toBottomOf="@+id/percenter_help" />

        <TextView
            android:id="@+id/percenter_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/percenter_about"
            android:textColor="#888888"
            app:layout_constraintEnd_toEndOf="@+id/percenter_feedback"
            app:layout_constraintStart_toStartOf="@+id/percenter_feedback"
            app:layout_constraintTop_toBottomOf="@+id/percenter_feedback" />

        <TextView
            android:id="@+id/percenter_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="96dp"
            android:background="@color/red"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="5dp"
            android:text="@string/percenter_cancel"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/percenter_about" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="18dp"
            android:text="@string/percenter_msgpush"
            android:textColor="#888888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />
    </android.support.constraint.ConstraintLayout>
</layout>
